# QLearning

./: CMakeLists.txt  deep_qbrain.h  deep_qbrain_impl.hpp  experience.h  krr_qbrain.h  krr_qbrain_impl.hpp  main.cpp  memory.h  q_learning_algorithm.h  q_learning_algorithm_impl.hpp  qbrain.h  ram_memory.h
experiences/2048/: bitmanip.h  engine2048.c  engine2048.h  experience.cpp  experience.cpp.save  experience.h  grid.cpp  grid.hpp  main.c  main.cpp  precalc.c  precalc.h  utils.hpp
